--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "yubigen",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Node Thumbnail generation without limits",
   "main": "index.js",
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-plugin-mocha": "^4.12.1",
     "mocha": "^5.0.4"
   },
   "scripts": {
