--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yubigen",
-  "version": "0.3.0",
+  "version": "0.3.0-1",
   "description": "Node Thumbnail generation without limits",
   "main": "index.js",
   "devDependencies": {
