--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yubigen",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Node Thumbnail generation without limits",
   "main": "index.js",
   "devDependencies": {
@@ -31,5 +31,14 @@
     "name": "Derek Chan",
     "email": "dchan3@hawaii.edu",
     "url": "https://dchan3.github.io/"
-  }
+  },
+  "keywords": [
+    "graphicsmagick",
+    "image generator",
+    "image manipulation",
+    "imagemagick",
+    "thumbnail",
+    "thumbnail image",
+    "thumbnail image generator"
+  ]
 }
