Add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
     "thumbnail",
     "thumbnail image",
     "thumbnail image generator"
-  ]
+  ],
+  "homepage": "https://dchan3.github.io/yubigen"
 }
