Add text drawing function and relevant tests

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "graphicsmagick",
     "image generator",
     "image manipulation",
+    "image processing",
+    "image processor",
     "imagemagick",
     "thumbnail",
     "thumbnail image",
